feat: 채팅차단을 위한 채팅 코드 수정